# djangocms-rest-view

./: .coveragerc  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  bower.json  cms_helper.py  local.sqlite  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
djangocms_rest_view/: __init__.py  fields.py  routers.py  serializers.py  urls.py  views.py
djangocms_rest_view/client/: urls.py  views.py
djangocms_rest_view/client/static/djangocms_rest/js/: app.js  controllers.js  filters.js  rest-client.js
djangocms_rest_view/client/static/js/: app.js  controllers.js
djangocms_rest_view/client/static/partials/: home.html  inner.html  page-detail.html
djangocms_rest_view/client/templates/rest/: base.html
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: base.py  test_models.py  test_serializers.py
tests/test_utils/: urls.py
tests/tests_utils/project/: urls.py
tests/tests_utils/project/management/commands/: create_test_data.py
